# mlir-hail

./: CMakeLists.txt  LICENSE  README.md
examples/: co-opt-pipeline.mlir  consume-co-opt.mlir  consume-missing.mlir  consume-present.mlir  continuations.mlir  hello.mlir  if-optional.mlir  random-optionals.mlir  test.mlir  unpack-pack.mlir  variadic-optional.mlir
hail-opt/: CMakeLists.txt  hail-opt.cpp
hailc/: CMakeLists.txt  hailc.cpp
include/: CMakeLists.txt
include/Control/: CMakeLists.txt  ControlDialect.h  ControlDialect.td  ControlOps.td
include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Conversion/ControlToStandard/: ControlToStandard.h
include/Conversion/OptionalToStandard/: OptionalToStandard.h
include/Optional/: CMakeLists.txt  OptionalDialect.h  OptionalDialect.td  OptionalOps.h  OptionalOps.td
include/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Control/: CMakeLists.txt  ControlDialect.cpp  ControlOps.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/ControlToStandard/: CMakeLists.txt  ControlToStandard.cpp
lib/Conversion/OptionalToStandard/: CMakeLists.txt  OptionalToStandard.cpp
lib/Optional/: CMakeLists.txt  OptionalDialect.cpp  OptionalOps.cpp
lib/Transforms/: CMakeLists.txt  PassDetail.h  RequirednessPropagation.cpp
test/: CMakeLists.txt  co-optional-canonicalization.mlir  cont.mlir  cse.mlir  lit.cfg.py  lit.site.cfg.py.in  opt-to-co-opt-round-trip.mlir  optional-canonicalization.mlir
util/: build-llvm-in-batch.py
util/docker/llvm-builder-alpine/: Dockerfile
(+1 files in other folders)
